--- a/project.html
+++ b/project.html
@@ -1,3 +1,4 @@
+<body style="background-color: black">
 <div style="display: flex; flex-wrap: wrap; gap: 20px; padding: 20px;">
 <!-- Project Card 1 - MapleSim -->
 <a href="https://github.com/Shenzhen-Robotics-Alliance/maple-sim" style="text-decoration: none;">
@@ -76,3 +77,4 @@
 </div>
 </div>
 </div>
+</body>
